Create button-larinin bg-colorunu deyisdim

--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Blog/Index.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Blog/Index.cshtml
@@ -20,7 +20,7 @@
     </header>
     <div class="panel-body">
         <div class="button-create">
-            <a asp-area="ConstructionAdmin" asp-controller="Blog" asp-action="Create" class="btn btn-primary">Create New News Element</a>
+            <a asp-area="ConstructionAdmin" asp-controller="Blog" asp-action="Create" class="btn" style="color: #fff; background-color: #ffc925;">Create New News Element</a>
         </div>
         <div class="adv-table editable-table ">
             <div class="space15"></div>
