--- a/ConstructionSite/Areas/ConstructionAdmin/Views/About/Index.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/About/Index.cshtml
@@ -20,7 +20,7 @@
 
     <div class="panel-body">
         <div class="button-create">
-            <a asp-area="ConstructionAdmin" asp-controller="About" asp-action="Add" class="btn btn-primary">Create New About Element</a>
+            <a asp-area="ConstructionAdmin" asp-controller="About" asp-action="Add" class="btn" style="color: #fff; background-color: #ffc925;">Create New About Element</a>
         </div>
         <div class="adv-table editable-table ">
             <div class="space15"></div>
