--- a/ConstructionSite/wwwroot/ConstructionAdmin/css/style.css
+++ b/ConstructionSite/wwwroot/ConstructionAdmin/css/style.css
@@ -211,7 +211,7 @@ ul.sidebar-menu , ul.sidebar-menu li ul.sub{
 }
 
 ul.sidebar-menu {
-    margin-top: 75px;
+    margin-top: 8em;
 }
 
 #sidebar > ul > li > ul.sub {
@@ -258,8 +258,6 @@ ul.sidebar-menu li ul.sub li a:hover, ul.sidebar-menu li ul.sub li.active a {
 }
 
 ul.sidebar-menu li{
-    /*line-height: 20px !important;*/
-    margin-bottom: 5px;
     margin-left:10px;
     margin-right:10px;
 }
