--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Contact/Index.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Contact/Index.cshtml
@@ -19,7 +19,7 @@
 
     <div class="panel-body">
         <div class="button-create">
-            <a asp-area="ConstructionAdmin" asp-controller="Contact" asp-action="Add" class="btn btn-primary">Create New Contact Element</a>
+            <a asp-area="ConstructionAdmin" asp-controller="Contact" asp-action="Add" class="btn" style="color: #fff; background-color: #ffc925;">Create New Contact Element</a>
         </div>
         <div class="adv-table editable-table ">
             <div class="space15"></div>
