--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Project/Index.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Project/Index.cshtml
@@ -19,7 +19,7 @@
         </header>
         <div class="panel-body">
             <div class="button-create">
-                <a asp-area="ConstructionAdmin" asp-controller="Project" asp-action="Add" class="btn btn-primary">Create New Project Element</a>
+                <a asp-area="ConstructionAdmin" asp-controller="Project" asp-action="Add" class="btn" style="color: #fff; background-color: #ffc925;">Create New Project Element</a>
             </div>
             <div class="adv-table editable-table ">
 
