--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Account/Index.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Account/Index.cshtml
@@ -1,5 +1,16 @@
 ﻿@model IEnumerable<UserDTO>
 
+<style>
+    .user-profile {
+        width: 30%;
+        float: left;
+        margin-left: -20%;
+    }
+    .user-bio{
+        float: right;
+    }
+</style>
+
 <div class="text-danger" asp-validation-summary="All"></div>
 
 <!--main content start-->
@@ -8,14 +19,14 @@
 
         <!-- page start-->
         <div class="row">
-            <aside class="profile-nav col-lg-3">
+            <aside class="profile-nav col-lg-3 user-profile">
                 <section class="panel">
 
                     @await Component.InvokeAsync("UserProfile")
 
                 </section>
             </aside>
-            <aside class="profile-info col-lg-9">
+            <aside class="profile-info col-lg-9 user-bio">
                 <section class="panel">
                     <div class="bio-graph-heading">
                         <h1>Bio Graph</h1>
