Account-un index-nin style-in deyisdim

--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Account/Index.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Account/Index.cshtml
@@ -2,12 +2,17 @@
 
 <style>
     .user-profile {
-        width: 30%;
+        width: 37%;
         float: left;
         margin-left: -20%;
     }
-    .user-bio{
+    .user-bio {
         float: right;
+        width: 80%;
+        margin-right: 3%;
+    }
+    .common {
+        margin-top: 45px;
     }
 </style>
 
@@ -15,7 +20,7 @@
 
 <!--main content start-->
 <section id="main-content">
-    <section class="wrapper">
+    <section class="wrapper common">
 
         <!-- page start-->
         <div class="row">
