Common class-ni daxil etdim

--- a/ConstructionSite/Areas/ConstructionAdmin/Views/About/Index.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/About/Index.cshtml
@@ -11,12 +11,17 @@
         text-align: center;
         font-size: 1.2em;
     }
+    .common {
+        margin-top: 45px !important;
+        background-color: RGB(241, 242, 247) !important;
+    }
 </style>
 
-<section class="panel">
+<section class="panel common">
     <header class="panel-heading">
         About Elements Table
     </header>
+    <hr />
 
     <div class="panel-body">
         <div class="button-create">
