--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Account/Index.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Account/Index.cshtml
@@ -12,11 +12,9 @@
         margin-right: 3%;
     }
     .common {
-        margin-top: 45px;
+        margin-top: 45px !important;
     }
 </style>
-
-<div class="text-danger" asp-validation-summary="All"></div>
 
 <!--main content start-->
 <section id="main-content">
