--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Blog/Index.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Blog/Index.cshtml
@@ -14,7 +14,7 @@
     }
 </style>
 
-<section class="panel">
+<section class="panel common">
     <header class="panel-heading">
         News Elements Table
     </header>
