--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Contact/Index.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Contact/Index.cshtml
@@ -12,7 +12,7 @@
 
 <div class="text-danger" asp-validation-summary="All"></div>
 
-<section class="panel">
+<section class="panel common">
     <header class="panel-heading">
         Contact - Table
     </header>
