--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Description/Index.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Description/Index.cshtml
@@ -12,9 +12,7 @@
     }
 </style>
 
-
-
-<section class="panel">
+<section class="panel common">
     <header class="panel-heading">
         Description Table
     </header>
