--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Project/Index.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Project/Index.cshtml
@@ -13,7 +13,7 @@
         }
     </style>
 
-    <section class="panel">
+    <section class="panel common">
         <header class="panel-heading">
             Project Table
         </header>
