--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Portfolio/Index.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Portfolio/Index.cshtml
@@ -13,9 +13,7 @@
     }
 </style>
 
-<div class="text-danger" asp-validation-summary="All"></div>
-
-<section class="panel">
+<section class="panel common">
     <header class="panel-heading">
         Portfolio Elements Table
     </header>
