--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Service/Index.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Service/Index.cshtml
@@ -14,9 +14,7 @@
     }
 </style>
 
-<div class="text-danger" asp-validation-summary="All"></div>
-
-<section class="panel">
+<section class="panel common">
     <header class="panel-heading">
         Service Table
     </header>
