--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Description/Index.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Description/Index.cshtml
@@ -10,12 +10,17 @@
         text-align: center;
         font-size: 1.2em;
     }
+    .common {
+        margin-top: 45px !important;
+        background-color: RGB(241, 242, 247) !important;
+    }
 </style>
 
 <section class="panel common">
     <header class="panel-heading">
         Description Table
     </header>
+    <hr />
     <div class="panel-body">
         <div class="button-create">
             <a asp-area="ConstructionAdmin" asp-controller="Description" asp-action="Add" class="btn" style="color: #fff; background-color: #ffc925;">Create New About Element</a>
