--- a/ConstructionSite/Views/Services/Inner.cshtml
+++ b/ConstructionSite/Views/Services/Inner.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model ServiceSubServiceImage
 @{
     ViewData["Title"] = "Inner";
 }
@@ -13,7 +13,6 @@
             </div>
         </div>
     </div>
-
 
     <div id="main-content" class="site-main clearfix">
         <div id="content-wrap" class="container">
@@ -93,7 +92,7 @@
                                                 <div class="cbp-item-wrapper">
                                                     <div class="item-wrap">
                                                         <a class="zoom" href="assets/img/projects/3.jpg"><i class="fa fa-arrows-alt"></i></a>
-                                                        <img  src="assets/img/projects/3.jpg" alt="image">
+                                                        <img src="assets/img/projects/3.jpg" alt="image">
                                                     </div>
                                                 </div>
                                             </div><!--/.cbp-item -->
@@ -181,3 +180,7 @@
             </div><!-- /#sidebar -->
         </div><!-- /#content-wrap -->
     </div>
+
+
+
+    
