--- a/ConstructionSite/Areas/ConstructionAdmin/Views/About/Add.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/About/Add.cshtml
@@ -4,15 +4,28 @@
     ViewData["Title"] = "Add";
 }
 
-<div class="text-danger" asp-validation-summary="All"></div>
+<style>
+    .add-model {
+        margin-left: 20px;
+        background-color: rgb(241,242, 247);
+    }
+    .add-model header {
+        height: 30px;
+        margin-top: 15px;
+    }
+    .add-body {
+        margin-top: -10px;
+    }
+</style>
 
 <div class="row">
     <div class="col-lg-12">
-        <section class="panel">
+        <section class="panel add-model">
             <header class="panel-heading">
                 Add About Elements
             </header>
-            <div class="panel-body">
+            <hr />
+            <div class="panel-body add-body">
                 <form role="form" class="form-horizontal tasi-form" asp-area="ConstructionAdmin" asp-controller="About" asp-action="Add" method="post" enctype="multipart/form-data">
                     <div class="form-group">
                         <div class="col-lg-10">
