--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Blog/Create.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Blog/Create.cshtml
@@ -7,7 +7,7 @@
 
 <div class="row">
     <div class="col-lg-12">
-        <section class="panel">
+        <section class="panel add-model">
             <header class="panel-heading">
                 Create News Elements
             </header>
