--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Contact/Add.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Contact/Add.cshtml
@@ -1,10 +1,8 @@
 ﻿@model ContactAddViewModel
 
-<div class="text-danger" asp-validation-summary="All"></div>
-
 <div class="row">
     <div class="col-lg-12">
-        <section class="panel">
+        <section class="panel add-model">
             <header class="panel-heading">
                 Create Contact Elements
             </header>
