--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Portfolio/Add.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Portfolio/Add.cshtml
@@ -3,13 +3,9 @@
     ViewData["Title"] = "Add";
 }
 
-<div class="text-danger" asp-validation-summary="All"></div>
-
-<section id="main-content">
-    <div class="wrapper">
         <div class="row">
             <div class="col-lg-12">
-                <section class="panel">
+                <section class="panel add-model">
                     <header class="panel-heading">
                         Portfolio Add
                     </header>
@@ -41,8 +37,7 @@
                 </section>
             </div>
         </div>
-    </div>
-</section>
+    
 
 @section scripts{
 <script>
