--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Service/Add.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Service/Add.cshtml
@@ -2,13 +2,9 @@
     ViewData["Title"] = "Add";
 }
 
-<div class="text-danger" asp-validation-summary="All"></div>
-
-<section id="main-content">
-    <div class="wrapper">
         <div class="row">
             <div class="col-lg-12">
-                <section class="panel">
+                <section class="panel add-model">
                     <header class="panel-heading">
                         Service Add
                     </header>
@@ -61,8 +57,6 @@
                 </section>
             </div>
         </div>
-    </div>
-</section>
 
 @section scripts{
     <script>
