--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Blog/Create.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Blog/Create.cshtml
@@ -1,9 +1,20 @@
 ﻿@model BlogAddViewModel
-@{
-    ViewData["Title"] = "Add";
-}
 
-<div class="text-danger" asp-validation-summary="All"></div>
+    <style>
+        .add-model {
+            margin-left: 20px;
+            background-color: rgb(241,242, 247);
+        }
+
+            .add-model header {
+                height: 30px;
+                margin-top: 15px;
+            }
+
+        .add-body {
+            margin-top: -10px;
+        }
+    </style>
 
 <div class="row">
     <div class="col-lg-12">
@@ -11,7 +22,7 @@
             <header class="panel-heading">
                 Create News Elements
             </header>
-            <div class="panel-body">
+            <div class="panel-body add-body">
                 <form role="form" class="form-horizontal tasi-form" asp-area="ConstructionAdmin" asp-controller="Blog" asp-action="Create" method="post" enctype="multipart/form-data">
                     <div class="form-group">
                         <div class="col-lg-10">
