--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Contact/Add.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Contact/Add.cshtml
@@ -1,12 +1,28 @@
 ﻿@model ContactAddViewModel
 
+    <style>
+        .add-model {
+            margin-left: 20px;
+            background-color: rgb(241,242, 247);
+        }
+
+            .add-model header {
+                height: 30px;
+                margin-top: 15px;
+            }
+
+        .add-body {
+            margin-top: -10px;
+        }
+    </style>
+
 <div class="row">
     <div class="col-lg-12">
         <section class="panel add-model">
             <header class="panel-heading">
                 Create Contact Elements
             </header>
-            <div class="panel-body">
+            <div class="panel-body add-body">
                 <form role="form" class="form-horizontal tasi-form" asp-area="ConstructionAdmin" asp-controller="Contact" asp-action="Add" method="post" enctype="multipart/form-data">
                     <div class="form-group">
                         <div class="col-lg-10">
