--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Portfolio/Add.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Portfolio/Add.cshtml
@@ -1,7 +1,20 @@
 ﻿@model PortfolioAddModel
-@{
-    ViewData["Title"] = "Add";
-}
+
+    <style>
+        .add-model {
+            margin-left: 20px;
+            background-color: rgb(241,242, 247);
+        }
+
+            .add-model header {
+                height: 30px;
+                margin-top: 15px;
+            }
+
+        .add-body {
+            margin-top: -10px;
+        }
+    </style>
 
         <div class="row">
             <div class="col-lg-12">
@@ -9,7 +22,7 @@
                     <header class="panel-heading">
                         Portfolio Add
                     </header>
-                    <div class="panel-body">
+                    <div class="panel-body add-body">
                         <form role="form" class="form-horizontal tasi-form" asp-area="ConstructionAdmin" asp-controller="Portfolio" asp-action="Add" method="post">
                             <div class="form-group">
                                 <div class="col-lg-10">
