--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Project/Add.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Project/Add.cshtml
@@ -1,7 +1,20 @@
 ﻿@model ProjectAddModel
-@{
-    ViewData["Title"] = "Add";
-}
+
+    <style>
+        .add-model {
+            margin-left: 20px;
+            background-color: rgb(241,242, 247);
+        }
+
+            .add-model header {
+                height: 30px;
+                margin-top: 15px;
+            }
+
+        .add-body {
+            margin-top: -10px;
+        }
+    </style>
 
 <div class="row">
     <div class="col-lg-12">
@@ -9,7 +22,7 @@
             <header class="panel-heading">
                 Project  Add
             </header>
-            <div class="panel-body">
+            <div class="panel-body add-body">
                 <form role="form" class="form-horizontal tasi-form" asp-area="ConstructionAdmin" asp-controller="Project" asp-action="Add" method="post" enctype="multipart/form-data">
                     <div class="form-group">
 
