--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Service/Add.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Service/Add.cshtml
@@ -1,6 +1,18 @@
-﻿@{
-    ViewData["Title"] = "Add";
-}
+﻿<style>
+    .add-model {
+        margin-left: 20px;
+        background-color: rgb(241,242, 247);
+    }
+
+        .add-model header {
+            height: 30px;
+            margin-top: 15px;
+        }
+
+    .add-body {
+        margin-top: -10px;
+    }
+</style>
 
         <div class="row">
             <div class="col-lg-12">
@@ -8,7 +20,7 @@
                     <header class="panel-heading">
                         Service Add
                     </header>
-                    <div class="panel-body">
+                    <div class="panel-body add-body">
                         <form role="form" class="form-horizontal tasi-form" asp-area="ConstructionAdmin" asp-controller="Service" asp-action="Add" method="post" enctype="multipart/form-data">
                             <div class="form-group">
                                 <div class="col-lg-10">
