Stated_But_Not_Finshed_Rol_Controller

--- a/ConstructionSite/Views/Shared/_Layout.cshtml
+++ b/ConstructionSite/Views/Shared/_Layout.cshtml
@@ -50,20 +50,7 @@
                             <div class="mobile-button"><span></span></div>
                             <!-- //mobile menu button -->
 
-                            <nav id="main-nav" class="main-nav">
-                                <ul class="menu">
-                                    <li class="current-menu-item"><a asp-controller="Home" asp-action="Index">Home</a></li>
-                                    <li><a asp-controller="About" asp-action="Index">About</a></li>
-                                    <li class="menu-item menu-item-has-children">
-                                        <a href="#team">Services</a>
-                                        @await Component.InvokeAsync("ServiceMenu")
-                                    </li>
-                                   
-                                    <li><a asp-controller="Portfolio" asp-action="Index">Portfolio</a></li>
-                                    <li><a asp-controller="Blog" asp-action="Index">Blog</a></li>
-                                    <li><a asp-controller="Contact" asp-action="Index">Contact</a></li>
-                                </ul>
-                            </nav>
+                        <partial name="_mainnav"/>
                             <!-- /#main-nav -->
 
                             <div class="nav-top-cart-wrapper">
@@ -169,33 +156,13 @@
     <a id="scroll-top">TOP</a>
 
     <!-- Javascript -->
-    <script type="text/javascript" src="~/assets/js/jquery.min.js"></script>
-    <script type="text/javascript" src="~/lib/bootstrap-v4-rtl/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="~/assets/js/animsition.js"></script>
-    <script type="text/javascript" src="~/assets/js/plugins.js"></script>
-    <script type="text/javascript" src="~/assets/js/countTo.js"></script>
-    <script type="text/javascript" src="~/assets/js/fitText.js"></script>
-    <script type="text/javascript" src="~/assets/js/flexslider.js"></script>
-    <script type="text/javascript" src="~/lib/vegas/vegas.min.js"></script>
-    <script type="text/javascript" src="~/assets/js/owlCarousel.js"></script>
-    <script type="text/javascript" src="~/assets/js/cube.portfolio.js"></script>
-    <script type="text/javascript" src="~/assets/js/main.js"></script>
+    <partial name="Javascript" />
 
     <!-- Revolution Slider -->
-    <script type="text/javascript" src="~/includes/rev-slider/js/jquery.themepunch.tools.min.js"></script>
-    <script type="text/javascript" src="~/includes/rev-slider/js/jquery.themepunch.revolution.min.js"></script>
-    <script type="text/javascript" src="~/assets/js/rev-slider.js"></script>
+    <partial name="Revolution" />
 
     <!-- Load Extensions only on Local File Systems ! The following part can be removed on Server for On Demand Loading -->
-    <script type="text/javascript" src="~/includes/rev-slider/js/extensions/revolution.extension.actions.min.js"></script>
-    <script type="text/javascript" src="~/includes/rev-slider/js/extensions/revolution.extension.carousel.min.js"></script>
-    <script type="text/javascript" src="~/includes/rev-slider/js/extensions/revolution.extension.kenburn.min.js"></script>
-    <script type="text/javascript" src="~/includes/rev-slider/js/extensions/revolution.extension.layeranimation.min.js"></script>
-    <script type="text/javascript" src="~/includes/rev-slider/js/extensions/revolution.extension.migration.min.js"></script>
-    <script type="text/javascript" src="~/includes/rev-slider/js/extensions/revolution.extension.navigation.min.js"></script>
-    <script type="text/javascript" src="~/includes/rev-slider/js/extensions/revolution.extension.parallax.min.js"></script>
-    <script type="text/javascript" src="~/includes/rev-slider/js/extensions/revolution.extension.slideanims.min.js"></script>
-    <script type="text/javascript" src="~/includes/rev-slider/js/extensions/revolution.extension.video.min.js"></script>
+    <partial name="Loading" />
 </body>
 </html>
 
