--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Description/Add.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Description/Add.cshtml
@@ -57,8 +57,8 @@
                     </div>
                     <div class="form-group">
                         <div class="col-lg-10">
-                            <select asp-for="SubServiceID">
-                                @foreach (var item in ViewBag.items)
+                            <select class="form-control m-bot15" asp-for="SubServiceID">
+                                @foreach (var item in ViewBag.data)
                                 {
                                     <option value="@item.Id">@item.Name</option>
                                 }
@@ -76,6 +76,7 @@
         </section>
     </div>
 </div>
+
 
 @section scripts{
     <script>
