--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Blog/Create.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Blog/Create.cshtml
@@ -57,13 +57,12 @@
                     </div>
                     <div class="form-group">
                         <div class="col-lg-10">
-                            <input type="file" name="file" id="f-name" class="form-control" placeholder="Images>
+                            <input type="file" name="file" id="f-name" class="form-control" placeholder="Images">
                         </div>
                     </div>
-
                     <div class="form-group">
                         <div class="col-lg-offset-2 col-lg-10">
-                            <button class="btn btn-danger" type="submit">Save</button>
+                            <button class="btn btn-success" type="submit">Save</button>
                             <button class="btn btn-default cancel-button" type="button">Cancel</button>
                         </div>
                     </div>
