--- a/ConstructionSite/Areas/ConstructionAdmin/Views/About/Update.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/About/Update.cshtml
@@ -8,7 +8,7 @@
 
 <div class="row">
     <div class="col-lg-12">
-        <section class="panel">
+        <section class="panel add-model">
             <header class="panel-heading">
                 Update About
             </header>
