--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Blog/Edit.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Blog/Edit.cshtml
@@ -4,7 +4,7 @@
 
 <div class="row">
     <div class="col-lg-12">
-        <section class="panel">
+        <section class="panel add-model">
             <header class="panel-heading">
                 Update About
             </header>
