--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Project/Update.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Project/Update.cshtml
@@ -3,11 +3,9 @@
     ViewData["Title"] = "Update";
 }
 
-<div class="text-danger" asp-validation-summary="All"></div>
-
 <div class="row">
     <div class="col-lg-12">
-        <section class="panel">
+        <section class="panel add-model">
             <header class="panel-heading">
                 Portfolio About
             </header>
