--- a/ConstructionSite/Areas/ConstructionAdmin/Views/SubService/Update.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/SubService/Update.cshtml
@@ -3,11 +3,9 @@
     ViewData["Title"] = "Update";
 }
 
-<div class="text-danger" asp-validation-summary="All"></div>
-
 <div class="row">
     <div class="col-lg-12">
-        <section class="panel">
+        <section class="panel add-model">
             <header class="panel-heading">
                 SubService About
             </header>
@@ -59,7 +57,7 @@
                     </div>
                     <div class="form-group">
                         <div class="col-lg-offset-2 col-lg-10">
-                            <button class="btn btn-success" type="submit">Submit</button>
+                            <button class="btn btn-success" type="submit">Save</button>
                             <button class="btn btn-default cancel-button" type="button">Cancel</button>
                         </div>
                     </div>
