--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Blog/Edit.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Blog/Edit.cshtml
@@ -8,7 +8,8 @@
             <header class="panel-heading">
                 Update About
             </header>
-            <div class="panel-body">
+            <hr />
+            <div class="panel-body add-body">
                 <form role="form" class="form-horizontal tasi-form" asp-area="ConstructionAdmin" asp-controller="Blog" asp-action="Edit" method="post" enctype="multipart/form-data">
                     @*<input type="hidden" name="Id" value="@Model.Id" /> *@
                     <input type="hidden" name="NewsId" value="@Model.NewsId" />
