--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Description/Update.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Description/Update.cshtml
@@ -7,9 +7,10 @@
     <div class="col-lg-12">
         <section class="panel add-model">
             <header class="panel-heading">
-                Update About
+                Update Description
             </header>
-            <div class="panel-body">
+            <hr />
+            <div class="panel-body add-body">
                 <form role="form" class="form-horizontal tasi-form" asp-area="ConstructionAdmin" asp-controller="Description" asp-action="Update" method="post">
                     <input type="hidden" name="SubServiceID" value="@Model.SubServiceID" />
                     <div class="form-group">
