--- a/ConstructionSite/Areas/ConstructionAdmin/Views/About/Update.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/About/Update.cshtml
@@ -4,15 +4,14 @@
     ViewData["Title"] = "Update";
 }
 
-<div class="text-danger" asp-validation-summary="All"></div>
-
 <div class="row">
     <div class="col-lg-12">
         <section class="panel add-model">
             <header class="panel-heading">
                 Update About
             </header>
-            <div class="panel-body">
+            <hr />
+            <div class="panel-body add-body">
                 <form role="form" class="form-horizontal tasi-form" asp-area="ConstructionAdmin" asp-controller="About" asp-action="Update" method="post" enctype="multipart/form-data">
                     <input type="hidden" name="Id" value="@Model.Id" />
                     <input type="hidden" name="aboutID" value="@Model.aboutID" />
