--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Project/Update.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Project/Update.cshtml
@@ -7,9 +7,10 @@
     <div class="col-lg-12">
         <section class="panel add-model">
             <header class="panel-heading">
-                Portfolio About
+                Portfolio Update
             </header>
-            <div class="panel-body">
+            <hr />
+            <div class="panel-body add-body">
                 <form role="form" class="form-horizontal tasi-form" asp-area="ConstructionAdmin" asp-controller="Portfolio" asp-action="Update" method="post" enctype="multipart/form-data">
                     <input type="hidden" name="PortfolioId" value="@Model.PortfolioId" />
                     <div class="form-group">
