--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Service/Update.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Service/Update.cshtml
@@ -9,7 +9,7 @@
             <header class="panel-heading">
                 Service Update
             </header>
-            <div class="panel-body">
+            <div class="panel-body add-body">
                 <form role="form" class="form-horizontal tasi-form" asp-area="ConstructionAdmin" asp-controller="Service" asp-action="Update" method="post" enctype="multipart/form-data">
                     <input type="hidden" name="ImageId" value="@Model.ImageId" />
                     <input type="hidden" name="id" value="@Model.id" />
