--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Portfolio/Update.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Portfolio/Update.cshtml
@@ -3,6 +3,23 @@
     ViewData["Title"] = "Update";
 }
 
+<style>
+    .add-model {
+        margin-left: 20px;
+        background-color: rgb(241,242, 247);
+    }
+
+        .add-model header {
+            height: 30px;
+            margin-top: 15px;
+        }
+
+    .add-body {
+        margin-top: -10px;
+    }
+</style>
+
+
 <div class="row">
     <div class="col-lg-12">
         <section class="panel add-model">
@@ -29,7 +46,7 @@
                     </div>
                     <div class="form-group">
                         <div class="col-lg-offset-2 col-lg-10">
-                            <button class="btn btn-success" type="submit">Submit</button>
+                            <button class="btn btn-success" type="submit">Save</button>
                             <button class="btn btn-default cancel-button" type="button">Cancel</button>
                         </div>
                     </div>
