--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Project/Update.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Project/Update.cshtml
@@ -3,6 +3,23 @@
     ViewData["Title"] = "Update";
 }
 
+<style>
+    .add-model {
+        margin-left: 20px;
+        background-color: rgb(241,242, 247);
+    }
+
+        .add-model header {
+            height: 30px;
+            margin-top: 15px;
+        }
+
+    .add-body {
+        margin-top: -10px;
+    }
+</style>
+
+
 <div class="row">
     <div class="col-lg-12">
         <section class="panel add-model">
