--- a/ConstructionSite/Areas/ConstructionAdmin/Views/SubService/Update.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/SubService/Update.cshtml
@@ -2,13 +2,30 @@
 @{
     ViewData["Title"] = "Update";
 }
+<style>
+    .add-model {
+        margin-left: 20px;
+        background-color: rgb(241,242, 247);
+    }
+
+        .add-model header {
+            height: 30px;
+            margin-top: 15px;
+        }
+
+    .add-body {
+        margin-top: -10px;
+    }
+</style>
+
 
 <div class="row">
     <div class="col-lg-12">
         <section class="panel add-model">
             <header class="panel-heading">
-                SubService About
+                SubService Update
             </header>
+            <hr />
             <div class="panel-body add-body">
                 <form role="form" class="form-horizontal tasi-form" asp-area="ConstructionAdmin" asp-controller="SubService" asp-action="Update" method="post" enctype="multipart/form-data">
                     <input type="hidden" name="Id" value="@Model.Id" />
