--- a/ConstructionSite/Views/Services/Service.cshtml
+++ b/ConstructionSite/Views/Services/Service.cshtml
@@ -1,4 +1,14 @@
 ﻿@model ServiceSubServiceImage
+<div id="featured-title" class="clearfix featured-title-left">
+    <div id="featured-title-inner" class="container clearfix">
+        <div class="featured-title-inner-wrap">
+            <div class="featured-title-heading-wrap">
+                <h1 class="featured-title-heading">Services</h1>
+            </div>
+
+        </div>
+    </div>
+</div>
 <div id="main-content" class="site-main clearfix">
     <div id="content-wrap" class="container">
         <div id="site-content" class="site-content clearfix">
@@ -20,7 +30,7 @@
 
                         <div class="wprt-spacer" data-desktop="35" data-mobi="35" data-smobi="35" style="height:35px"></div>
 
-                      
+
 
                         <div class="wprt-spacer" data-desktop="50" data-mobi="40" data-smobi="40" style="height:50px"></div>
                     </div><!-- /.col-md-12 -->
@@ -34,7 +44,7 @@
 
                         <div class="wprt-spacer" data-desktop="25" data-mobi="25" data-smobi="25" style="height:25px"></div>
 
-                        <p class="margin-bottom-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque nec erat erat. Integer nulla quis fermentum hendrerit. Vestibulum eu libero volutpat, portas quam acc, tempus sem. Donec sodales quam id lorem lobortis, vitae interdum nisl vehicula.</p>
+                        <p class="margin-bottom-0">@Model.SubName</p>
 
                         <div class="wprt-spacer" data-desktop="30" data-mobi="30" data-smobi="30" style="height:30px"></div>
 
@@ -42,8 +52,10 @@
                             <div id="images-wrap" class="cbp cbp-caption-active cbp-caption- cbp-ready cbp-mode-slider" style="height: 278px;">
                                 <div class="cbp-wrapper-outer">
                                     <div class="cbp-wrapper" style="width: 1646px; transform: translate3d(-828px, 0px, 0px);">
+
                                         @foreach (var item in Model.Images)
                                         {
+
 
                                             <div class="cbp-item" style="width: 404px; left: 1242px; top: 0px;">
                                                 <div class="cbp-item-wrapper">
@@ -53,7 +65,12 @@
                                                     </div>
                                                 </div>
                                             </div>
+
+
                                         }
+
+
+
 
 
                                     </div>
