--- a/ConstructionSite/Views/Services/withSubService.cshtml
+++ b/ConstructionSite/Views/Services/withSubService.cshtml
@@ -2,7 +2,16 @@
 @{
     ViewData["Title"] = "withSubService";
 }
+    <div id="featured-title" class="clearfix featured-title-left">
+        <div id="featured-title-inner" class="container clearfix">
+            <div class="featured-title-inner-wrap">
+                <div class="featured-title-heading-wrap">
+                    <h1 class="featured-title-heading">Services</h1>
+                </div>
 
+            </div>
+        </div>
+    </div>
     <div id="main-content" class="site-main clearfix">
         <div id="content-wrap" class="container">
             <div id="site-content" class="site-content clearfix">
