--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Contact/Add.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Contact/Add.cshtml
@@ -62,7 +62,7 @@
                     </div>
                     <div class="form-group">
                         <div class="col-lg-10">
-                            <input type="number" asp-for="PhoneNumber" id="f-name" class="form-control" placeholder="Phone Number">
+                            <input type="text" asp-for="PhoneNumber" id="f-name" class="form-control" placeholder="Phone Number">
                         </div>
                     </div>
                     <div class="form-group">
