--- a/ConstructionSite/Areas/ConstructionAdmin/Views/_ViewImports.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/_ViewImports.cshtml
@@ -8,6 +8,7 @@
 @using ConstructionSite.DTO.AdminViewModels.Image
 @using ConstructionSite.DTO.AdminViewModels.Project
 @using ConstructionSite.DTO.AdminViewModels.Service
+@using ConstructionSite.DTO.AdminViewModels.message
 @using ConstructionSite.DTO.AdminViewModels.SubService
 @using ConstructionSite.DTO.AdminViewModels.News
 @using ConstructionSite.Areas.ConstructionAdmin
