--- a/ConstructionSite/Areas/ConstructionAdmin/Views/AdminRole/Index.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/AdminRole/Index.cshtml
@@ -3,7 +3,7 @@
     ViewData["Title"] = "Index";
 }
 
-<style type="text/css">
+@*<style type="text/css">
     .button-create {
         margin-bottom: 10px;
     }
@@ -60,7 +60,7 @@
             </div>
         </div>
     </div>
-</section>
+</section>*@
 
 
         })
