--- a/ConstructionSite/Views/Shared/_mainnav.cshtml
+++ b/ConstructionSite/Views/Shared/_mainnav.cshtml
@@ -9,6 +9,6 @@
 
         <li><a asp-controller="Portfolio" asp-action="Index">Portfolio</a></li>
         <li><a asp-controller="Blog" asp-action="Index">Blog</a></li>
-        <li><a asp-controller="Contact" asp-action="Index">Contact</a></li>
+        <li><a asp-controller="Message" asp-action="Index">Contact</a></li>
     </ul>
 </nav>
