--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Shared/_AdminLayout.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Shared/_AdminLayout.cshtml
@@ -21,6 +21,7 @@
     <link href="~/ConstructionAdmin/css/style.css" rel="stylesheet">
     <link href="~/ConstructionAdmin/css/style-responsive.css" rel="stylesheet" />
     <link href="~/lib/datatables/css/jquery.dataTables.css" rel="stylesheet" />
+    @*<link href="~/style.css" rel="stylesheet" />*@
     <link rel="shortcut icon" href="~/assets/icon/favicon.png" />
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 tooltipss and media queries -->
     <!--[if lt IE 9]>
@@ -91,6 +92,7 @@
     <script src="~/ConstructionAdmin/js/respond.min.js"></script>
 
     <script src="~/ConstructionAdmin/js/jquery.dcjqaccordion.2.7.js" class="include" type="text/javascript"></script>
+    @*<script src="~/assets/js/main.js" class="include" type="text/javascript"></script>*@
 
     <!--common script for all pages-->
     <script src="~/ConstructionAdmin/js/common-scripts.js"></script>
