--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Shared/_MenuView.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Shared/_MenuView.cshtml
@@ -1,4 +1,4 @@
-﻿<li class="active list-navbar" style="margin-bottom: 0px;"><a asp-area="ConstructionAdmin" asp-controller="About" asp-action="Index" style="font-size: 1.1em;">About</a></li>
+﻿<li class="current-menu-item list-navbar" style="margin-bottom: 0px;"><a asp-area="ConstructionAdmin" asp-controller="About" asp-action="Index" style="font-size: 1.1em;">About</a></li>
 <li class="list-navbar" style="margin-bottom: 0px;"><a asp-area="ConstructionAdmin" asp-controller="Blog" asp-action="Index" style="font-size: 1.1em;">Blog</a></li>
 <li class="list-navbar" style="margin-bottom: 0px;"><a asp-area="ConstructionAdmin" asp-controller="Service" asp-action="Index" style="font-size: 1.1em;">Services</a></li>
 <li class="list-navbar" style="margin-bottom: 0px;"><a asp-area="ConstructionAdmin" asp-controller="SubService" asp-action="Index" style="font-size: 1.1em;">SubService</a></li>
