--- a/ConstructionSite/Views/Shared/_Layout.cshtml
+++ b/ConstructionSite/Views/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
     <![endif]-->
 </head>
 
-<!-- <body class="front-page no-sidebar site-layout-full-width menu-has-cart header-sticky header-style-5"> -->
+
 <body class="front-page /*one-page*/  no-sidebar site-layout-full-width menu-has-cart header-sticky header-style-5">
     <div id="top"></div>
     <div id="wrapper" class="animsition">
@@ -162,7 +162,7 @@
     <partial name="Revolution" />
 
     <!-- Load Extensions only on Local File Systems ! The following part can be removed on Server for On Demand Loading -->
-    <partial name="Loading" />
+    <!--<partial name="Loading" />-->
 </body>
 </html>
 
