--- a/ConstructionSite/Views/_ViewImports.cshtml
+++ b/ConstructionSite/Views/_ViewImports.cshtml
@@ -10,6 +10,7 @@
 @using ConstructionSite.DTO.FrontViewModels.Testimonial
 @using ConstructionSite.DTO.FrontViewModels.Message
 @using ConstructionSite.DTO.AdminViewModels.Image
+@using ConstructionSite.Views.Shared.Components
 @using ConstructionSite.Entity.Models
 @using ConstructionSite.Models
 @using ConstructionSite.DTO.FrontViewModels.Blog
