--- a/ConstructionSite/Views/Shared/Components/About/Default.cshtml
+++ b/ConstructionSite/Views/Shared/Components/About/Default.cshtml
@@ -1,28 +1,28 @@
 ﻿@model AboutViewModel
-
 <section id="about" class="wprt-section clearfix text-center">
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <div class="wprt-spacer" data-desktop="100" data-mobi="40" data-smobi="40"></div>
+                <div class="wprt-spacer" data-desktop="100" data-mobi="40" data-smobi="40" style="height:100px"></div>
                 <h2 class="text-center margin-bottom-20">ABOUT US</h2>
                 <div class="wprt-lines style-2 custom-1">
                     <div class="line-1"></div>
                 </div>
-                <div class="wprt-spacer" data-desktop="36" data-mobi="30" data-smobi="30"></div>
+
+                <div class="wprt-spacer" data-desktop="36" data-mobi="30" data-smobi="30" style="height:36px"></div>
+
                 <p class="wprt-subtitle">@Model.Tittle</p>
-                <div class="link"><a asp-controller="About" asp-action="Index" class="wprt-button small rounded-3px">READ MORE</a></div>
-                <div class="wprt-spacer" data-desktop="40" data-mobi="30" data-smobi="30"></div>
+                <div class="link">  <a href="about.html" class="wprt-button small rounded-3px">READ MORE</a></div>
+
+                <div class="wprt-spacer" data-desktop="40" data-mobi="30" data-smobi="30" style="height:40px"></div>
+
                 <div class="text-center">
-                    <img src="@Model.Image"  alt="image" class="image-style naib" />
+                    <img src="@Model.Image" alt="image" class="image-style">
+
                 </div>
-            </div>
-            <!-- /.col-md-12 -->
 
-        </div>
-        <!-- /.row -->
+            </div><!-- /.col-md-12 -->
 
-    </div>
-    <!-- /.container -->
-
+        </div><!-- /.row -->
+    </div><!-- /.container -->
 </section>
