--- a/ConstructionSite/Views/Portfolio/Index.cshtml
+++ b/ConstructionSite/Views/Portfolio/Index.cshtml
@@ -36,8 +36,8 @@
 
         </div>
         <!-- /#project-filter -->
-
-        
+        <partial name="_ProjectView"/>
+       
         <!-- /#projects -->
 
     </div>
