--- a/ConstructionSite/Views/Shared/_Layout.cshtml
+++ b/ConstructionSite/Views/Shared/_Layout.cshtml
@@ -163,8 +163,7 @@
     <!-- Revolution Slider -->
     <partial name="Revolution" />
 
-    <!-- Load Extensions only on Local File Systems ! The following part can be removed on Server for On Demand Loading -->
-    <!--<partial name="Loading" />-->
+  @RenderSection("scrips",false)
 </body>
 </html>
 
