--- a/ConstructionSite/Views/_ViewImports.cshtml
+++ b/ConstructionSite/Views/_ViewImports.cshtml
@@ -5,12 +5,12 @@
 @using ConstructionSite.DTO.FrontViewModels.Portfoli
 @using ConstructionSite.DTO.FrontViewModels.Contact
 @using ConstructionSite.DTO.FrontViewModels.Service
-@using ConstructionSite.DTO.FrontViewModels.Portfoli
 @using ConstructionSite.DTO.FrontViewModels.SubService
 @using ConstructionSite.DTO.FrontViewModels.Testimonial
 @using ConstructionSite.DTO.FrontViewModels.Message
 @using ConstructionSite.DTO.AdminViewModels.Image
 @using ConstructionSite.Views.Shared.Components
+@using ConstructionSite.DTO.FrontViewModels.Project
 @using ConstructionSite.Entity.Models
 @using ConstructionSite.Models
 @using ConstructionSite.DTO.FrontViewModels.Blog
