Front terefden logonu duzeltdim

--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Shared/_AdminLayout.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Shared/_AdminLayout.cshtml
@@ -50,7 +50,7 @@
         <header class="header white-bg my-Header" style="background-color: RGB(49,49,49); opacity: .8; box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1)">
             <!--logo start-->
             <a asp-controller="Home" asp-action="Index" title="Construction" rel="home" class="construction-logo">
-                <img src="~/assets/img/logo-light.png" alt="Construction" data-retina="assets/img/logo-light@2x.png" data-width="204" data-height="30" style="width: 12.6em; margin-top: 17px; margin-bottom: -34px">
+                <img src="~/assets/img/logo-light.png" alt="Construction" data-retina="assets/img/logo-light.png" data-width="204" data-height="30" style="width: 12.6em; margin-top: 17px; margin-bottom: -34px">
             </a>
             <!--logo end-->
 
