--- a/ConstructionSite/Views/Shared/_Layout.cshtml
+++ b/ConstructionSite/Views/Shared/_Layout.cshtml
@@ -19,7 +19,7 @@
     @RenderSection("head", false)
 
     <!-- Favicon and touch icons  -->
-    <link rel="shortcut icon" href="~/assets/icon/favicon.png">
+    <link rel="shortcut icon" href="~/assets/img/logo-light.png">
     <link rel="apple-touch-icon-precomposed" href="~/assets/icon/apple-touch-icon-158-precomposed.png" />
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -41,7 +41,7 @@
                             <div id="site-logo" class="clearfix">
                                 <div id="site-logo-inner">
                                     <a asp-controller="Home" asp-action="Index" title="Construction" rel="home" class="main-logo">
-                                        <img src="~/assets/img/logo-light.png" alt="Construction" data-retina="assets/img/logo-light@2x.png" data-width="204" data-height="30">
+                                        <img src="~/assets/img/logo-light.png" alt="Construction" data-retina="assets/img/logo-light.png" data-width="204" data-height="30" style=" position: absolute; width: 110px; height: 68px; top: -8px;  background-color: white;">
                                     </a>
                                 </div>
                             </div>
@@ -99,7 +99,7 @@
                         <div class="col-md-8">
                             <div class="widget widget_about margin-bottom-25">
                                 <div class="margin-bottom-35">
-                                    <img src="~/assets/img/logo-light@2x.png" width="204" height="30" alt="image" />
+                                    <img src="~/assets/img/logo-light.png" width="204" height="30" alt="image" />
                                 </div>
                                 <p>Nullam vel enim risus. Integer rhoncus hendrerit sem egestas porttitor.</p>
                                 <section class="widget widget_information">
